third_party/WebKit/Source/WebCore/platform/blackberry/AuthenticationChallengeManager.h
@@ -20,8 +20,13 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef AuthenticationChallengeManager_h
 #define AuthenticationChallengeManager_h
 
+#include <wtf/OwnPtr.h>
+
+class PageClientBlackBerry;
+
 namespace WebCore {
 
+class AuthenticationChallengeManagerPrivate;
 class Credential;
 class KURL;
 class ProtectionSpace;
@@ -35,6 +40,27 @@ class AuthenticationChallengeClient {
 public:
     virtual void notifyChallengeResult(const KURL&, const ProtectionSpace&, AuthenticationChallengeResult, const Credential&) = 0;
 };
+
+class AuthenticationChallengeManager {
+public:
+    static void init();
+    static AuthenticationChallengeManager* instance();
+
+    void pageCreated(PageClientBlackBerry*);
+    void pageDeleted(PageClientBlackBerry*);
+    void pageVisibilityChanged(PageClientBlackBerry*, bool visible);
+
+    void authenticationChallenge(const KURL&, const ProtectionSpace&, const Credential&, AuthenticationChallengeClient*, PageClientBlackBerry*);
+    void cancelAuthenticationChallenge(AuthenticationChallengeClient*);
+    void notifyChallengeResult(const KURL&, const ProtectionSpace&, AuthenticationChallengeResult, const Credential&);
+
+private:
+    AuthenticationChallengeManager();
+    ~AuthenticationChallengeManager();
+
+    OwnPtr<AuthenticationChallengeManagerPrivate> d;
+};
+
 
 } // namespace WebCore
 
