third_party/WebKit/Source/WebCore/platform/network/blackberry/NetworkJob.h
@@ -30,6 +30,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <network/FilterStream.h>
 #include <wtf/OwnPtr.h>
 #include <wtf/RefPtr.h>
+#include <wtf/Vector.h>
 #include <wtf/text/WTFString.h>
 
 namespace BlackBerry {
@@ -50,6 +51,8 @@ class ResourceRequest;
 class NetworkJob : public AuthenticationChallengeClient, public BlackBerry::Platform::FilterStream {
 public:
     NetworkJob();
+    ~NetworkJob();
+
     bool initialize(int playerId,
                     const String& pageGroupName,
                     const KURL&,
@@ -172,6 +175,8 @@ private:
     DeferredData m_deferredData;
     int m_deferLoadingCount;
     const Frame* m_frame;
+
+    bool m_isAuthenticationChallenging;
 };
 
 } // namespace WebCore
